@@ -4,6 +4,7 @@ import eu.isygoit.com.rest.service.IMultiFileServiceMethods;
 import eu.isygoit.constants.DomainConstants;
 import eu.isygoit.encrypt.helper.CRC16;
 import eu.isygoit.encrypt.helper.CRC32;
+import eu.isygoit.exception.FileNotFoundException;
 import eu.isygoit.exception.ObjectNotFoundException;
 import eu.isygoit.exception.UploadFileException;
 import eu.isygoit.model.*;
@@ -15,22 +16,11 @@ import org.springframework.util.CollectionUtils;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.File;
-import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.lang.reflect.ParameterizedType;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
+import java.util.stream.Collectors;
 
-/**
- * The type Multi file service.
- *
- * @param <I> the type parameter
- * @param <T> the type parameter
- * @param <L> the type parameter
- * @param <R> the type parameter
- */
 @Slf4j
 public abstract class MultiFileService<I, T extends IMultiFileEntity & IIdEntity, L extends ILinkedFile & ICodifiable & IIdEntity, R extends JpaPagingAndSortingRepository>
         extends MultiFileServiceSubMethods<I, T, L, R>
@@ -39,72 +29,108 @@ public abstract class MultiFileService<I, T extends IMultiFileEntity & IIdEntity
     private final Class<T> persistentClass = (Class<T>) ((ParameterizedType) getClass().getGenericSuperclass()).getActualTypeArguments()[1];
     private final Class<L> linkedFileClass = (Class<L>) ((ParameterizedType) getClass().getGenericSuperclass()).getActualTypeArguments()[2];
 
+    // Helper method to get the entity by ID
+    private T getEntityById(I parentId) {
+        return getById(parentId)
+                .orElseThrow(() -> new ObjectNotFoundException(persistentClass.getSimpleName() + " with id: " + parentId));
+    }
+
     @Override
     public List<L> upload(I parentId, MultipartFile[] files) {
-        T entity = getById(parentId).orElseThrow(() -> new ObjectNotFoundException(persistentClass.getSimpleName() + " with id: " + parentId));
+        T entity = getEntityById(parentId); // Fetch entity once
+
+        // Log the upload process
+        log.info("Uploading {} files for entity {} with ID {}", files.length, persistentClass.getSimpleName(), parentId);
+
+        // Process each file and upload
         Arrays.stream(files).forEach(file -> {
             try {
-                upload(parentId, file);
+                uploadSingleFile(parentId, file);
             } catch (IOException e) {
+                log.error("Failed to upload file: {}", file.getOriginalFilename(), e);
                 throw new UploadFileException(e);
             }
         });
+
         return entity.getAdditionalFiles();
     }
 
     @Override
     public List<L> upload(I parentId, MultipartFile file) throws IOException {
-        T entity = getById(parentId).orElseThrow(() -> new ObjectNotFoundException(persistentClass.getSimpleName() + " with id: " + parentId));
-        if (Objects.nonNull(file) && !file.isEmpty()) {
-            L linkedFile = createLinkedFile(entity, file);
-            linkedFile = beforeUpload(entity, linkedFile, file);
-            linkedFile = subUploadFile(file, linkedFile);
-            afterUpload(entity, linkedFile, file);
+        uploadSingleFile(parentId, file);  // Delegate to helper method for single file upload
+        return getEntityById(parentId).getAdditionalFiles();  // Return updated files
+    }
 
-            if (CollectionUtils.isEmpty(entity.getAdditionalFiles())) {
-                entity.setAdditionalFiles(new ArrayList<>());
-            }
-            entity.getAdditionalFiles().add(linkedFile);
-        } else {
-            log.warn("Upload file ({}) :File is null or empty", this.persistentClass.getSimpleName());
+    // Helper method to handle a single file upload logic
+    private void uploadSingleFile(I parentId, MultipartFile file) throws IOException {
+        if (Objects.isNull(file) || file.isEmpty()) {
+            log.warn("File is null or empty. Upload skipped.");
+            return; // Early return if file is invalid
         }
 
-        entity = this.update(entity);
-        return entity.getAdditionalFiles();
+        T entity = getEntityById(parentId); // Fetch the parent entity
+
+        // Create the linked file and process it
+        L linkedFile = createLinkedFile(entity, file);
+        linkedFile = beforeUpload(entity, linkedFile, file); // Pre-upload hook
+        linkedFile = subUploadFile(file, linkedFile); // Specific upload logic
+        afterUpload(entity, linkedFile, file); // Post-upload hook
+
+        // Initialize additionalFiles if empty
+        if (CollectionUtils.isEmpty(entity.getAdditionalFiles())) {
+            entity.setAdditionalFiles(new ArrayList<>());
+        }
+
+        // Add the linked file to the entity
+        entity.getAdditionalFiles().add(linkedFile);
+
+        // Log successful upload
+        log.info("File {} uploaded successfully for entity {} with ID {}", file.getOriginalFilename(), persistentClass.getSimpleName(), parentId);
+
+        // Update entity in the database
+        this.update(entity);
     }
 
     @Override
     public Resource download(I parentId, I fileId, Long version) throws IOException {
-        T entity = getById(parentId).orElseThrow(() -> new ObjectNotFoundException(this.persistentClass.getSimpleName() + " with id " + parentId));
-        L linkedFile = findLinkedFileById(entity, fileId);
-        if (linkedFile != null) {
-            return subDownloadFile(linkedFile, version);
-        } else {
-            throw new ObjectNotFoundException(this.linkedFileClass.getSimpleName() + " with id " + fileId);
-        }
+        T entity = getEntityById(parentId); // Fetch entity by ID
+
+        // Find the linked file by ID
+        L linkedFile = Optional.ofNullable(findLinkedFileById(entity, fileId))
+                .orElseThrow(() -> new ObjectNotFoundException(linkedFileClass.getSimpleName() + " with id " + fileId));
+
+        // Log download request
+        log.info("Downloading file with ID {} for entity {} with ID {}", fileId, persistentClass.getSimpleName(), parentId);
+
+        return subDownloadFile(linkedFile, version); // Return the resource for the file
     }
 
     @Override
     public boolean delete(I parentId, I fileId) throws IOException {
-        T entity = getById(parentId).orElseThrow(() -> new ObjectNotFoundException(persistentClass.getSimpleName() + " with id: " + parentId));
-        L linkedFile = findLinkedFileById(entity, fileId);
-        if (linkedFile != null) {
-            entity.getAdditionalFiles().removeIf(elm -> ((L) elm).getId().equals(fileId));
-            subDeleteFile(linkedFile);
-            this.update(entity);
-            return true;
-        } else {
-            throw new FileNotFoundException(linkedFileClass.getSimpleName() + " with id " + fileId);
-        }
+        T entity = getEntityById(parentId); // Fetch the entity
+
+        // Find the linked file by its ID
+        L linkedFile = Optional.ofNullable(findLinkedFileById(entity, fileId))
+                .orElseThrow(() -> new FileNotFoundException(linkedFileClass.getSimpleName() + " with id " + fileId));
+
+        // Remove the linked file from the additional files list
+        entity.getAdditionalFiles().removeIf(elm -> ((L)elm).equals(fileId));
+        subDeleteFile(linkedFile); // Handle specific file deletion logic
+
+        // Update the entity
+        this.update(entity);
+
+        // Log successful deletion
+        log.info("Deleted file with ID {} for entity {} with ID {}", fileId, persistentClass.getSimpleName(), parentId);
+
+        return true;
     }
 
-    // Helper method to create a linked file
     private L createLinkedFile(T entity, MultipartFile file) throws IOException {
         try {
-            L linkedFile = linkedFileClass.newInstance();
-            this.getNextCode().ifPresent(linkedFile::setCode);
-            setDomainIfNeeded(entity, linkedFile);
+            L linkedFile = linkedFileClass.getDeclaredConstructor().newInstance();
 
+            // Set additional file properties
             linkedFile.setOriginalFileName(file.getOriginalFilename());
             linkedFile.setExtension(FilenameUtils.getExtension(file.getOriginalFilename()));
             linkedFile.setPath(getFilePath(entity, file));
@@ -114,65 +140,43 @@ public abstract class MultiFileService<I, T extends IMultiFileEntity & IIdEntity
             linkedFile.setSize(file.getSize());
             linkedFile.setVersion(1L);
 
+            this.getNextCode().ifPresent(linkedFile::setCode); // Set next code
+            setDomainIfNeeded(entity, linkedFile); // Set domain if needed
+
             return linkedFile;
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (Exception e) {
             log.error("Error creating linked file instance: ", e);
             throw new UploadFileException("Error creating linked file instance", e);
         }
     }
 
-    // Helper method to set domain if needed
     private void setDomainIfNeeded(T entity, L linkedFile) {
         if (entity instanceof ISAASEntity isaasEntity && linkedFile instanceof ISAASEntity isaasLinkedFile) {
-            isaasLinkedFile.setDomain(isaasEntity.getDomain());
+            isaasLinkedFile.setDomain(isaasEntity.getDomain()); // Set domain if applicable
         }
     }
 
-    // Helper method to get the file path for a linked file
     private String getFilePath(T entity, MultipartFile file) {
-        return this.getUploadDirectory() +
-                File.separator + (entity instanceof ISAASEntity isaasEntity ? isaasEntity.getDomain() : DomainConstants.DEFAULT_DOMAIN_NAME) +
+        return this.getUploadDirectory() + File.separator +
+                (entity instanceof ISAASEntity isaasEntity ? isaasEntity.getDomain() : DomainConstants.DEFAULT_DOMAIN_NAME) +
                 File.separator + persistentClass.getSimpleName().toLowerCase() + File.separator + "additional";
     }
 
-    // Helper method to find a linked file by ID
     private L findLinkedFileById(T entity, I fileId) {
         return (L) entity.getAdditionalFiles().stream()
-                .filter(item -> ((L) item).getId().equals(fileId)).findFirst()
+                .filter(elm -> ((L)elm).equals(fileId))
+                .findFirst()
                 .orElse(null);
     }
 
-    /**
-     * Before upload l.
-     *
-     * @param entity     the entity
-     * @param linkedFile the linked file
-     * @param file       the file
-     * @return the l
-     * @throws IOException the io exception
-     */
-// Hook methods for pre- and post-processing
+    // Hook methods for pre- and post-processing
     public L beforeUpload(T entity, L linkedFile, MultipartFile file) throws IOException {
-        return linkedFile;
+        return linkedFile;  // Can be overridden for additional pre-upload logic
     }
 
-    /**
-     * After upload l.
-     *
-     * @param entity     the entity
-     * @param linkedFile the linked file
-     * @param file       the file
-     * @return the l
-     * @throws IOException the io exception
-     */
     public L afterUpload(T entity, L linkedFile, MultipartFile file) throws IOException {
-        return linkedFile;
+        return linkedFile;  // Can be overridden for additional post-upload logic
     }
 
-    /**
-     * Gets upload directory.
-     *
-     * @return the upload directory
-     */
-    protected abstract String getUploadDirectory();
+    protected abstract String getUploadDirectory();  // Abstract method to get the upload directory
 }
